added pets route
